<resources>
    <string name="app_name">奶茶控</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_login_in">Login</string>
    <string name="welcome">"Welcome!"</string>

    <string name="invalid_username">Not a valid username</string>qing
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile_username">Hi，今天喝奶茶了梅</string>
    <string name="profile_day">今天是说你爱上奶茶的第n天</string>
    <string name="profile_header_title">"今天喝奶茶了梅"</string>
    <string name="profile_header_slogan">"A cup of milk tea a day keeps docter away."</string>
    <string name="profile_favorites">我的点赞</string>
    <string name="profile_collcet">我的收藏</string>
    <string name="profile_likes">我的口味</string>
    <string name="profile_message">消息中心</string>
    <string name="profile_contact">联系客服</string>
    <string name="profile_more">退出当前帐号</string>
    <string name="milktea_name">雪山思乡龙眼</string>
    <string name="profile_login">"Login"</string>
    <string name="profile_register">"Register"</string>
    <string name="multiAuto_hint">"秋天第一杯奶茶"</string>
    <string name="login_button">登录</string>
    <string name="login_tosignup">还没有账号？点击注册</string>
    <string name="username1">被奶茶控住</string>
    <string name="givealike">点赞</string>
    <string name="comment">评论</string>
    <string name="collection">收藏</string>
    <string name="username2">控几不住喝奶茶</string>
    <string name="detail_title1">详情</string>
    <string name="detail_title2">评价</string>
    <string name="detail_username">被奶茶控制住了</string>
    <string name="profile_favourite">我的点赞</string>
    <string name="search_hint">搜索动态、话题、用户</string>
    <string name="detail_comment1">    赢了 赢了  喜茶的白月光！\n\n点法：雪山思乡龙眼+少糖+冷藏牛乳茶换常规乌龙牛乳茶+脆波波\n\n真的绝了！喜茶近半年新品里我最满意的没有之一！！\n\n个人觉得奶油顶换椰椰雪糕更好喝椰子味的清新和龙岩的清甜好搭！奶油顶好看  大家按需选择~</string>
    <string name="detail_comment2">一点点换配方了吗？怎么现在这么好喝！爱了爱了\n\n点法：阿华田+奶盖+波霸+冰淇淋+不另外加糖+去冰\n\n我也打卡了这个很火的网红喝法 真的良心推荐！巨好喝！！\n\n这次点了大杯 口感丰富 也不会甜腻 我宣布成为我的梦中情奶了！</string>
    <string name="describe1">描述：</string>
    <string name="describe1_main">冷 500ml  优选多足多汁的新鲜龙眼，颗颗手剥去去核。完全鲜果，不经颜值，保留龙眼原始的蜜香清甜。将顺滑冷藏牛乳打制成细腻冰沙，鲜甜果肉佐以嫩滑的无香精桂花冻，花香果甜一口满足。顶部为动物奶油制作的雪山奶油顶，颗颗饱满龙眼肉如夜明珠。</string>
    <string name="describe2">热量：</string>
    <string name="describe2_main">约 460 kcal</string>
    <string name="re_password">确认密码</string>
    <string name="password">密码</string>
    <string name="username">用户名/手机号码</string>
    <string name="register">注册</string>
    <string name="btn1">少冰</string>
    <string name="btn2">椰果</string>
    <string name="btn3">无糖</string>
    <string name="btn4">波霸</string>
    <string name="btn7">+</string>
    <string name="btn8">乌龙茶</string>
    <string name="btn6">红茶</string>
    <string name="btn5">果茶</string>
    <string name="btn9">绿茶</string>
    <string name="btn10">椰果</string>
    <string name="btn11">三分糖</string>
    <string name="btn12">去冰</string>
    <string name="btn13">半糖</string>
    <string name="btn14">正常冰</string>
    <string name="btn15">多冰</string>
    <string name="btn16">七分糖</string>
    <string name="btn17">正常糖</string>
    <string name="btn18">西米</string>
    <string name="btn19">烧仙草</string>
    <string name="btn20">红豆</string>
    <string name="btn21">芋圆</string>
    <string name="btn22">布丁</string>
    <string name="btn23">柠檬</string>
    <string name="msgbox">消息通知</string>
    <string name="privateset">隐私设置</string>
    <string name="setting">通用设置</string>
    <string name="acountsaft">账号与安全</string>
    <string name="help">帮助与反馈</string>
    <string name="about">关于奶茶控</string>
    <string name="title_activity_moment_list">MomentList</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="navigation_home">Home</string>
</resources>