<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MoreActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f7f6fb">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/arrow_turn"
                android:onClick="turn_back"
                android:id="@+id/turnback"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="25dp"
                android:layout_marginRight="50dp"
                android:text="@string/profile_more"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:orientation="vertical"
            android:background="#f7f6fb">
            <Button
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:textSize="20dp"
                android:background="#f7f6fb"
                android:layout_gravity="left"
                android:text="@string/msgbox"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#b3aeb2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:textSize="20dp"
                android:background="#f7f6fb"
                android:layout_gravity="left"
                android:text="@string/privateset"/>
        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="vertical"
        android:background="#f7f6fb">
        <Button
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:textSize="20dp"
            android:background="#f7f6fb"
            android:layout_gravity="left"
            android:text="@string/setting"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b3aeb2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:textSize="20dp"
            android:background="#f7f6fb"
            android:layout_gravity="left"
            android:text="@string/acountsaft"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="vertical"
        android:background="#f7f6fb">
        <Button
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:textSize="20dp"
            android:background="#f7f6fb"
            android:layout_gravity="left"
            android:text="@string/help"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b3aeb2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:textSize="20dp"
            android:background="#f7f6fb"
            android:layout_gravity="left"
            android:text="@string/about"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:background="#f7f6fb">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:background="#f7f6fb"
            android:layout_gravity="left"
            android:textColor="@color/purple_700"
            android:id="@+id/logout"
            android:text="退出当前账号"/>
    </LinearLayout>



</LinearLayout>