<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <ScrollView
        android:layout_width="410dp"
        android:layout_height="694dp"
        android:scrollbars="none">
        <!--        android:overScrollMode="always"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/detail_topbg"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/Turn_back"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center"
                        android:background="@drawable/ic_leftarrow"
                        app:backgroundTint="@color/grey"
                        android:layout_margin="10dp"
                        android:onClick="turn_back"/>
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/detail_brandtext1" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/detail_brandlogo1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/detail_drink"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/detail_textbg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center|center"
                    android:text="@string/milktea_name"
                    android:textColor="@color/bottom_Icontext"
                    android:textFontWeight="2"
                    android:textSize="19dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center|center"
                    android:text="28￥起"
                    android:textSize="14dp" />
                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center|center"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="160dp"
                    android:background="@drawable/user_collection"/>
            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="400dp"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    android:background="@drawable/detail_scroll">
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:strokeColor="@color/white">

                <LinearLayout
                    android:layout_width="410dp"
                    android:layout_height="25dp"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:text="@string/detail_title1"
                        android:textSize="15dp"
                        android:background="#ffffff"
                        android:gravity="center"
                        android:onClick="turn_describe"
                        android:layout_marginLeft="20dp"/>
                    <Button
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:text="@string/detail_title2"
                        android:background="#ffffff"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginLeft="20dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="410dp"
                    android:layout_height="500dp"
                    android:orientation="vertical"
                    android:background="@drawable/detail_commentbg">
                    <LinearLayout
                        android:layout_width="410dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_head_portrait1"
                            android:layout_marginLeft="30dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:src="@drawable/detail_hpic"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_username"
                            android:textSize="20sp"
                            android:layout_marginTop="15dp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/black"
                            android:typeface="monospace"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="410dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_comment1"
                            android:textSize="13dp" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp">
                            <ImageButton
                                android:layout_marginLeft="10dp"
                                android:layout_width="120dp"
                                android:layout_height="180dp"
                                android:background="@drawable/user1_pic1"/>
                            <ImageButton
                                android:layout_marginLeft="10dp"
                                android:layout_width="120dp"
                                android:layout_height="180dp"
                                android:background="@drawable/user1_pic2"/>
                            <ImageButton
                                android:layout_width="120dp"
                                android:layout_marginLeft="10dp"
                                android:layout_height="180dp"
                                android:background="@drawable/user1_pic3"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp">

                            <com.google.android.material.button.MaterialButton
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                                android:id="@+id/like_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/grey"
                                android:text="@string/givealike"
                                android:textSize="20sp"
                                android:layout_margin="3dp"
                                app:strokeColor="@color/white"
                                app:backgroundTint="@color/white"
                                app:icon="@drawable/ic_upvote"
                                app:iconSize="35dp"
                                app:iconTint="?attr/colorPrimary"

                                />
                            <com.google.android.material.button.MaterialButton
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:id="@+id/comment_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/comment"
                                android:layout_margin="3dp"
                                app:backgroundTint="@color/white"
                                android:textColor="@color/grey"
                                android:textSize="20sp"
                                app:strokeColor="@color/white"
                                app:icon="@drawable/ic_comment"
                                app:iconSize="30dp"
                                />
                            <com.google.android.material.button.MaterialButton
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:id="@+id/collect_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="3dp"
                                android:layout_weight="1"
                                android:text="@string/collection"
                                app:backgroundTint="@color/white"
                                android:textSize="20sp"
                                android:textColor="@color/grey"
                                app:strokeColor="@color/white"
                                app:icon="@drawable/ic_collection"
                                app:iconSize="35dp"

                                />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>


    </ScrollView>
</LinearLayout>